# ChangeLog for sys-libs/glibc
# Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-libs/glibc/ChangeLog,v 1.475 2006/07/28 14:52:33 plasmaroo Exp $

  28 Jul 2006; <plasmaroo@gentoo.org> glibc-2.3.5-r3.ebuild:
  Stable on IA64; fix bug #141681.

  22 Jul 2006; Bryan Østergaard <kloeri@gentoo.org> glibc-2.3.6-r4.ebuild:
  Stable on alpha.

  09 Jul 2006; Joshua Kinard <kumba@gentoo.org> glibc-2.3.6-r4.ebuild:
  Marked stable on mips.

  08 Jul 2006; Lars Weiler <pylon@gentoo.org> glibc-2.3.6-r4.ebuild:
  Stable on ppc; bug #137121.

  04 Jul 2006; Mike Frysinger <vapier@gentoo.org> glibc-2.3.5-r2.ebuild,
  glibc-2.3.5-r3.ebuild, glibc-2.3.6-r3.ebuild, glibc-2.3.6-r4.ebuild,
  glibc-2.4-r3.ebuild:
  Add back in sanity check to prevent people from downgrading their glibc.

  28 Jun 2006; Markus Rothe <corsair@gentoo.org> glibc-2.3.6-r4.ebuild:
  Stable on ppc64

  28 Jun 2006; Mike Frysinger <vapier@gentoo.org> glibc-2.3.6-r4.ebuild,
  glibc-2.4-r3.ebuild:
  Disable --with-__thread when USE=glibc-compat20 #138028 by je_fro.

  27 Jun 2006; Luca Barbato <lu_zero@gentoo.org> glibc-2.4-r3.ebuild:
  Marked stable on ppc

  27 Jun 2006; Mike Frysinger <vapier@gentoo.org> glibc-2.3.6-r4.ebuild,
  glibc-2.4-r3.ebuild:
  Punt Fedora tarballs in favor of packaging c_stubs/glibc-compat ourselves
  #138028 by je_fro.

  25 Jun 2006; Guy Martin <gmsoft@gentoo.org> glibc-2.3.6-r4.ebuild:
  Stable on hppa.

  25 Jun 2006; Marcus D. Hanwell <cryos@gentoo.org> glibc-2.3.6-r4.ebuild:
  Marked stable on amd64, bug 137121.

  24 Jun 2006; Markus Rothe <corsair@gentoo.org> glibc-2.4-r3.ebuild:
  Added ~ppc64 to get more user response for bugs

  22 Jun 2006; Mike Frysinger <vapier@gentoo.org> glibc-2.3.6-r4.ebuild,
  glibc-2.4-r3.ebuild:
  Make locale-gen upgrade path a little smoother for people who want *all*
  locales generated #137538.

  21 Jun 2006; Gustavo Zacarias <gustavoz@gentoo.org> glibc-2.3.6-r4.ebuild: