@@ -1,3 +1,6 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA1
+
 AUX 2.3.1/glibc-2.3.1-ctype-compat-v3.patch 2823 RMD160 f1162b7f313f7ea18fb178157d3bd6205d818e3a SHA1 d1dceb79689e9c627ebd630389ec1948d7a0a6e4 SHA256 0bc07eb47578d5bfb98774b18bf07aee2af44a7ccd947602c223b34e0d88394a
 MD5 941f13d27badc76c1e3704c59acaff26 files/2.3.1/glibc-2.3.1-ctype-compat-v3.patch 2823
 RMD160 f1162b7f313f7ea18fb178157d3bd6205d818e3a files/2.3.1/glibc-2.3.1-ctype-compat-v3.patch 2823
@@ -517,18 +520,18 @@ EBUILD glibc-2.3.6-r3.ebuild 43134 RMD160 ccee382a34bace29a032b560f0eef789f3a2ce
 MD5 7ab5df396baff8ddd8278ad407d0f9aa glibc-2.3.6-r3.ebuild 43134
 RMD160 ccee382a34bace29a032b560f0eef789f3a2ce65 glibc-2.3.6-r3.ebuild 43134
 SHA256 90787f969f2e852df04108e8eb41cd6b94caf44a50386c17e01ad6eccd4c1f48 glibc-2.3.6-r3.ebuild 43134
-EBUILD glibc-2.3.6-r4.ebuild 37102 RMD160 6c7456170c75152f29b3ff392fe27f1afe610d7c SHA1 17bed710e5f39189a84632d8ee67650a87a3adba SHA256 4227576305e1d86abe413d83f28c2494df7b9980cc7c56d025cf09c7cbf2837e
-MD5 936ba51f36e14b880e4ffd959a17d998 glibc-2.3.6-r4.ebuild 37102
-RMD160 6c7456170c75152f29b3ff392fe27f1afe610d7c glibc-2.3.6-r4.ebuild 37102
-SHA256 4227576305e1d86abe413d83f28c2494df7b9980cc7c56d025cf09c7cbf2837e glibc-2.3.6-r4.ebuild 37102
-EBUILD glibc-2.4-r3.ebuild 38621 RMD160 64c42951a7b0c45aa1ed106539ebbfaf4a75c7b9 SHA1 da2cb535cb2b51f034f086ef5173c68f42b10605 SHA256 4872e9feec2dabb7391c92ab60d9347622660f015fce7ab8a56053f4269c4469
-MD5 fb376e2712f113e6e4bd4b94823c259b glibc-2.4-r3.ebuild 38621
-RMD160 64c42951a7b0c45aa1ed106539ebbfaf4a75c7b9 glibc-2.4-r3.ebuild 38621
-SHA256 4872e9feec2dabb7391c92ab60d9347622660f015fce7ab8a56053f4269c4469 glibc-2.4-r3.ebuild 38621
-MISC ChangeLog 95668 RMD160 5cd6e8f392a36b7a53c6b8e6d266cdd634b2d175 SHA1 eba2791839d34395ad6361e4397732926a5cf4e1 SHA256 7d81932790f0fd26a8d8d00e767f69683e9ca878569fbd5596a427338cf3aa68
-MD5 e5dbe121653e7fbae907d39923d7c921 ChangeLog 95668
-RMD160 5cd6e8f392a36b7a53c6b8e6d266cdd634b2d175 ChangeLog 95668
-SHA256 7d81932790f0fd26a8d8d00e767f69683e9ca878569fbd5596a427338cf3aa68 ChangeLog 95668
+EBUILD glibc-2.3.6-r4.ebuild 37124 RMD160 dcad856f93042d484f023928475bd5540387af61 SHA1 9f6fe02f71a1c73b22aee124e6f4aa8b1633285e SHA256 83dc836e27c3c96bc61582d62ca1a1d34f7d54edcf220fa1f35ac68b4a02c965
+MD5 483a30b40fb22b3853f59e42dcb1fad7 glibc-2.3.6-r4.ebuild 37124
+RMD160 dcad856f93042d484f023928475bd5540387af61 glibc-2.3.6-r4.ebuild 37124
+SHA256 83dc836e27c3c96bc61582d62ca1a1d34f7d54edcf220fa1f35ac68b4a02c965 glibc-2.3.6-r4.ebuild 37124
+EBUILD glibc-2.4-r3.ebuild 38643 RMD160 00e7be588352cf307499a86b8973d35f9fdd19f7 SHA1 b43b09d43e1c651d17ffd457b21a62ae4924606c SHA256 4db386a7e47e4b7c3f2b1ce286c1ff6631b06123e8630d20661ccc8ae7a4a532
+MD5 ee68876b3cc8c1129e82cb13391e2b11 glibc-2.4-r3.ebuild 38643
+RMD160 00e7be588352cf307499a86b8973d35f9fdd19f7 glibc-2.4-r3.ebuild 38643
+SHA256 4db386a7e47e4b7c3f2b1ce286c1ff6631b06123e8630d20661ccc8ae7a4a532 glibc-2.4-r3.ebuild 38643
+MISC ChangeLog 95845 RMD160 327b2e764f87dd7ea1aaf0315ff7d24d983b5b7d SHA1 dd588361920a27832b7e62c2cfaa571b40044f99 SHA256 60c085c60b64a199d41b56061c08585b8877d49b07e83a49034fba64a9f91f9d
+MD5 0aaaf96f611c4c4408dcbbe7afd758fa ChangeLog 95845
+RMD160 327b2e764f87dd7ea1aaf0315ff7d24d983b5b7d ChangeLog 95845
+SHA256 60c085c60b64a199d41b56061c08585b8877d49b07e83a49034fba64a9f91f9d ChangeLog 95845
 MISC metadata.xml 162 RMD160 d002486a43522f2116b1d9d59828c484956d66e2 SHA1 d6b4923897f6ae673b4f93646f5b4ba61d5a2c3c SHA256 65a915d44de1f01d4b7f72d313b4192c38374a9835d24988c00c1e73dca5805a
 MD5 567094e03359ffc1c95af7356395228d metadata.xml 162
 RMD160 d002486a43522f2116b1d9d59828c484956d66e2 metadata.xml 162
@@ -572,3 +575,10 @@ SHA256 e780eefdde60f4ab9870c81854b0226ff2bf3b19e13149e83e146ce9a3e7b6b4 files/di
 MD5 0839b75709d53cb72b9a3f6039d220a5 files/digest-glibc-2.4-r3 1575
 RMD160 c82aed2e0f3f556b051d7e3a1fc13c202f67bf2f files/digest-glibc-2.4-r3 1575
 SHA256 f22d43e9647ef7c83b51e5102caaca7e38b3d16783e6097b1a3cbe4b0957070e files/digest-glibc-2.4-r3 1575
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v1.4.4 (GNU/Linux)
+
+iD8DBQFE0/GJ5mJXAu5GbtIRApqJAJ49e0l1Bla4hE3tp52BYqGSc3iQxgCcD1i7
+F5MN30fSTvxr874HBA6EOkU=
+=yja7
+-----END PGP SIGNATURE-----
